# SimplShotUnified

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/settings/: AboutSettings.tsx  GeneralSettings.tsx  PresetsSettings.tsx  TemplatesSettings.tsx
src/pages/: EditorPage.tsx
src/store/: settings.ts
