[package]
name = "simplshot-unified"
version = "0.1.0"
description = "SimplShot - Cross-platform screenshot tool"
authors = []
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
xcap = "0.9"
image = "0.25"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
dirs = "5"
urlencoding = "2"
